--- a/style/style_phatsua.css
+++ b/style/style_phatsua.css
@@ -6,7 +6,7 @@ body {
 	text-align: center;
 	font-family: Quicksand;
 	color: white;
-  background-image: url(/img/phatsua_bg.jpg);
+  	background-image: url(/img/phatsua_bg.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
@@ -18,33 +18,10 @@ body {
 	text-align: center;
 	position: absolute;
 	border-radius: 36px;
+	max-width: 320px;
 	padding: 40px;
 	left: 50%;
 	top: 50%;
-}
-.bphatsua {
-	font-family: Quicksand;
-	background-color: #FFA50099;
-	border: none;
-	border-radius: 12px;
-	color: white;
-	padding: 20px;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	font-size: 30px;
-	margin: 8px 2px;
-	cursor: pointer;
-}
-.bhover {
-	-moz-transition: all 0.1s ease-in;
-	-o-transition: all 0.1s ease-in;
-	-webkit-transition: all 0.2s ease-in;
-	transition: all 0.1s ease-in;
-}
-.bhover:hover {
-	transition: all 0.2s ease-in;
-	transform: scale(1.1);
 }
 .phatsua_avt {
 	display: block;
@@ -52,4 +29,29 @@ body {
 	width: 210px;
 	margin-left: auto;
 	margin-right: auto;
+}
+.bphatsua {
+	-moz-transition: all 0.1s ease-in;
+	-o-transition: all 0.1s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	transition: all 0.1s ease-in;
+	font-family: Quicksand;
+	background-color: #FFA50099;
+	border: none;
+	border-radius: 12px;
+	color: white;
+	padding: 18px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 28px;
+	margin: 8px 2px;
+	cursor: pointer;
+}
+.bphatsua:hover {
+	-moz-transition: all 0.1s ease-in;
+	-o-transition: all 0.1s ease-in;
+	-webkit-transition: all 0.2s ease-in;
+	transition: all 0.1s ease-in;
+	transform: scale(1.1);
 }
