--- a/style/style_phatsua.css
+++ b/style/style_phatsua.css
@@ -6,7 +6,7 @@ body {
 	text-align: center;
 	font-family: Quicksand;
 	color: white;
-  	background-image: url(/img/phatsua_bg.jpg);
+  	background-image: url(/img/phatsua/phatsua_bg.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-attachment: fixed;
