Update introduction section

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,4 +1,8 @@
-.max-width-container {
-    max-width: 800px;
+.navbar-background {
+    background-color: #007bbf;
 }
-  
+
+.highlight {
+    color: #007bbf;
+    font-weight: 700;
+}
