--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -21,4 +21,20 @@ hr {
 .section-title {
     font-size: 45px;
 }
+
+p {
+    font-size: 18px;
+}
+
+.tech-icon {
+    padding: 3px;
+    width: 40px;
+}
+
+.tech-icons-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    overflow: hidden;
+  }
   
