--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+body {
+    height: 100vh;
+    overflow: auto;
+  }
+  
+
 .navbar-background {
     background-color: #007bbf;
     color: white
@@ -29,6 +35,13 @@ p {
 
 .email {
     color: #000000;
+}
+
+.email:hover {
+    color: #007bbf;
+}
+
+.anchor {
     text-decoration: none;
 }
 
