--- a/src/App.css
+++ b/src/App.css
@@ -1,117 +1,113 @@
 body {
-    height: 100vh;
-    overflow: auto;
-  }
-  
+  height: 100vh;
+  overflow: auto;
+}
 
 .navbar-background {
-    background-color: #007bbf;
-    color: white
+  background-color: #007bbf;
+  color: white;
 }
 
 .highlight {
-    color: #007bbf;
-    font-weight: 700;
+  color: #007bbf;
+  font-weight: 700;
 }
 
 hr {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 0;
-    border-top: 2px solid rgba(119, 119, 119, 0.1);
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 2px solid rgba(119, 119, 119, 0.1);
 }
 
 .title {
-    font-size: 55px;
+  font-size: 55px;
 }
 
 .section-title {
-    font-size: 45px;
+  font-size: 45px;
 }
 
 p {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .email {
-    color: #000000;
+  color: #000000;
 }
 
 .email:hover {
-    color: #007bbf;
+  color: #007bbf;
 }
 
 .anchor {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .tech-icon {
-    padding: 3px;
-    width: 40px;
+  padding: 3px;
+  width: 40px;
 }
 
 .tech-icons-container {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  overflow: hidden;
 }
 
 #worksbox img {
-    height: 300px;
-    width: auto;
+  height: 300px;
+  width: auto;
 }
 
 #footer {
-    padding-left: 10px;
-    padding-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 @media only screen and (max-width: 1200px) {
-    #introduction {
-        display: flex;
-        flex-direction: column;
-    }
-    #works {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    #worksbox img {
-        height: 250px;
-        width: auto;
-    }
-    #contactme {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
-    #contactme div {
-        margin-bottom: 10px;
-    }
-    #skills {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
+  #introduction {
+    display: flex;
+    flex-direction: column;
+  }
+  #works {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  #worksbox img {
+    height: 250px;
+    width: auto;
+  }
+  #contactme {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  #contactme div {
+    margin-bottom: 10px;
+  }
+  #skills {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 470px) {
-    .section-title {
-        font-size: 40px;
-    }
-    #worksbox img {
-        height: 200px;
-        width: auto;
-    }
+  .section-title {
+    font-size: 40px;
+  }
+  #worksbox img {
+    height: 200px;
+    width: auto;
+  }
 }
 
 @media only screen and (max-width: 380px) {
-    #worksbox img {
-        height: 150px;
-        width: auto;
-    }
+  #worksbox img {
+    height: 150px;
+    width: auto;
+  }
 }
-
-
-
