--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,10 @@ p {
   }
 }
 
+#introduction {
+  height: 100vh;
+}
+
 @media only screen and (max-width: 470px) {
   .section-title {
     font-size: 40px;
