--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,7 @@ body {
   font-family: "Cabin", sans-serif !important;
   height: 100vh;
   overflow: auto;
-}
-
-.skills-box {
-  position: absolute;
-  right: 55vh;
+  background-color: #111111 !important;
 }
 
 p {
@@ -33,7 +29,6 @@ p {
 
 section {
   color: white;
-  background-color: #111111;
   height: 100vh;
 }
 
@@ -60,6 +55,9 @@ section {
   body {
     text-align: center !important;
     align-items: center !important;
+  }
+  section {
+    height: max-content !important;
   }
   #introduction {
     display: flex !important;
@@ -94,6 +92,17 @@ section {
   }
   .introduction-img {
     width: 75% !important;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  #value-card {
+    width: 40vw !important;
+    margin: 5vh 5vw !important;
+  }
+
+  #value-card h2 {
+    font-size: 20px !important;
   }
 }
 
@@ -151,6 +160,26 @@ section {
   p {
     font-size: 25px !important;
   }
+  .school-box-section {
+    width: 100% !important;
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
+  .school-box {
+    text-align: center !important;
+    margin-bottom: 50px !important;
+    max-width: none !important;
+    width: 80vw !important;
+    max-width: 500px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+  #skills {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 @media only screen and (max-width: 500px) {
@@ -171,6 +200,23 @@ section {
   box-shadow: 0px 0px 60px 1px rgba(0, 240, 255, 0.25);
   max-width: 40vw;
   padding: 15px;
+}
+
+.skills-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100vh;
+  position: absolute;
+  right: 55vh;
+}
+
+@media only screen and (max-width: 1279px) {
+  .skills-box {
+    position: static !important;
+    width: 100% !important;
+    height: max-content !important;
+  }
 }
 
 .background-component {
@@ -248,6 +294,17 @@ section {
   border-radius: 20px;
 }
 
+@media only screen and (max-width: 1279px) and (min-width: 420px) {
+  #value-card {
+    width: 40vw !important;
+    margin: 5vh 5vw !important;
+  }
+
+  #value-card h2 {
+    font-size: 25px !important;
+  }
+}
+
 .red {
   border: 1px solid #f00;
   background: #210000;
@@ -291,6 +348,13 @@ section {
   transition: border-color 0.2s ease-in-out;
 }
 
+@media only screen and (max-width: 1279px) {
+  #text-input {
+    width: 80vw !important;
+    max-width: 500px !important;
+  }
+}
+
 #text-input:focus {
   border: 2px solid #ffffff;
 }
@@ -305,6 +369,7 @@ section {
 
 #submit-button {
   width: 4vw;
+  min-width: 60px;
   padding: 5px;
   border-radius: 50px;
   background: #00f0ff;
