Update submit button text color

--- a/src/App.css
+++ b/src/App.css
@@ -373,6 +373,7 @@ section {
   padding: 5px;
   border-radius: 50px;
   background: #00f0ff;
+  color: black;
   margin-top: 2vh;
   outline: none;
   border: none;
