--- a/src/App.css
+++ b/src/App.css
@@ -442,3 +442,16 @@ section {
     font-size: 60px;
   }
 }
+
+@media only screen and (min-width: 1440px) and (max-width: 1536px) {
+  .skills-box {
+    transform: scale(0.85);
+  }
+  .works-container img {
+    transform: scale(0.8);
+  }
+  #aboutme .section-title,
+  .section-title {
+    font-size: 64px;
+  }
+}
