--- a/src/App.css
+++ b/src/App.css
@@ -443,13 +443,13 @@ section {
   }
 }
 
-@media only screen and (min-width: 1440px) and (max-width: 1536px) {
-  .skills-box {
-    transform: scale(0.85);
-  }
+@media only screen and (max-width: 1600px) {
   .works-container img {
     transform: scale(0.8);
   }
+}
+
+@media only screen and (min-width: 1280px) and (max-width: 1536px) {
   #aboutme .section-title,
   .section-title {
     font-size: 64px;
