Better responsive & word choice

--- a/src/App.css
+++ b/src/App.css
@@ -175,12 +175,10 @@ section {
   }
   .school-box {
     text-align: center !important;
-    margin-bottom: 50px !important;
+    margin: 3rem auto 3rem auto !important;
     max-width: none !important;
     width: 80vw !important;
     max-width: 500px !important;
-    margin-left: auto !important;
-    margin-right: auto !important;
   }
   #skills {
     display: flex;
@@ -206,6 +204,7 @@ section {
   box-shadow: 0px 0px 60px 1px rgba(0, 240, 255, 0.25);
   max-width: 40vw;
   padding: 15px;
+  margin: 3rem 0 3rem 0;
 }
 
 .skills-box {
@@ -474,13 +473,13 @@ section {
 @media only screen and (min-width: 1280px) and (max-width: 1536px) {
   #aboutme .section-title,
   .section-title {
-    font-size: 64px;
+    font-size: 60px;
   }
   p {
     font-size: 28px !important;
   }
   .this-is {
-    font-size: 56px;
+    font-size: 56px !important;
   }
   .title {
     font-size: 72px;
@@ -492,5 +491,11 @@ section {
   }
   .works-title {
     font-size: 40px;
+  }
+  h2 {
+    font-size: 25px !important;
+  }
+  .school-box {
+    margin: 1.5rem 0 1.5rem 0;
   }
 }
