perf: :art: better RWD

--- a/src/App.css
+++ b/src/App.css
@@ -358,6 +358,7 @@ section {
   #text-input {
     width: 80vw !important;
     max-width: 500px !important;
+    min-width: 300px !important;
   }
 }
 
