--- a/src/App.css
+++ b/src/App.css
@@ -180,7 +180,7 @@ section {
     width: 80vw !important;
     max-width: 500px !important;
   }
-  #skills {
+  #technologies {
     display: flex;
     justify-content: center;
   }
@@ -207,7 +207,7 @@ section {
   margin: 3rem 0 3rem 0;
 }
 
-.skills-box {
+.technologies-box {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -217,7 +217,7 @@ section {
 }
 
 @media only screen and (max-width: 1279px) {
-  .skills-box {
+  .technologies-box {
     position: static !important;
     width: 100% !important;
     height: max-content !important;
@@ -269,9 +269,9 @@ section {
 }
 
 .tech-icon {
-  padding: 3px;
-  width: 40px !important;
-  height: 40px !important;
+  margin: 3px 4px 3px 4px;
+  width: 32px !important;
+  height: 32px !important;
 }
 
 .connections-icon {
