--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,19 @@ body {
   background-color: #111111 !important;
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #555;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+}
+
 h5 {
   margin-bottom: 0 !important;
 }
