--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Cabin:wght@400;700&display=swap");
-
 body {
   font-family: "Cabin", sans-serif !important;
   height: 100vh;
@@ -89,6 +87,7 @@ section {
     padding-bottom: 20px !important;
   }
   .introduction-img {
+    min-height: 464px !important;
     position: static !important;
     width: 50% !important;
     margin: 0 auto !important;
@@ -111,6 +110,7 @@ section {
     font-size: 75px !important;
   }
   .introduction-img {
+    min-height: 310px !important;
     width: 75% !important;
   }
 }
@@ -253,7 +253,7 @@ section {
 }
 
 .works-title {
-  font-size: 50px;
+  font-size: 50px !important;
   font-weight: 700;
   color: #fff;
 }
@@ -473,12 +473,7 @@ section {
     font-size: 70px;
   }
   .works-title {
-    font-size: 40px;
-  }
-  .introduction-img {
-    position: absolute;
-    width: 400px;
-    left: calc(25vw - 400px / 2);
+    font-size: 40px !important;
   }
 }
 
@@ -520,7 +515,7 @@ section {
     left: calc(25vw - 400px / 2);
   }
   .works-title {
-    font-size: 40px;
+    font-size: 40px !important;
   }
   h2 {
     font-size: 25px !important;
