--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+#root {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Cabin", sans-serif !important;
   height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
   background-color: #111111 !important;
 }
 
@@ -179,6 +182,17 @@ section {
   }
   p {
     font-size: 25px !important;
+  }
+  #education {
+    display: flex !important;
+    flex-direction: column !important;
+    align-items: center !important;
+    justify-content: center !important;
+    height: max-content !important;
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+      url("/images/components/aboutme-bg-2.webp") no-repeat center/cover !important;
   }
   .school-box-section {
     width: 100% !important;
